# gemini-client

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml
crates/gemini-client/: Cargo.toml
crates/gemini-client-macros/: Cargo.toml
crates/gemini-client-macros/src/: lib.rs
crates/gemini-client/examples/: basic.rs  generation_config.rs  inline_data.rs  system_instruction.rs  vnext_demo.rs
crates/gemini-client/src/: lib.rs  telemetry.rs  types.rs
examples/: basic.rs  code_execution.rs  custom_tool.rs  generation_config.rs  grounded.rs  grounded_2.rs  inline_data.rs  plan_and_execute.rs  rag_local.rs  supervisor_workflow.rs  system_instruction.rs  tool_param_types.rs
src/: lib.rs  main.rs  telemetry.rs  types.rs
src/agentic/: mod.rs  multi_agent.rs  planning.rs  rag.rs  test_support.rs  tool_runtime.rs
tests/: agentic_integration.rs  tracing_capture.rs
