[package]
name = "gemini_client_rs"
version = "0.4.0"
edition = "2021"
description = "A Rust client for Google Gemini API"
license = "MIT"
repository = "https://github.com/Adriftdev/gemini-client"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] } # For async requests
thiserror = "1.0" # For custom error types (optional, but good practice)
dotenvy = "0.15.7"
