[package]
name = "gemini_client_rs"
version = "0.5.0"
edition = "2021"
description = "A Rust client for Google Gemini API"
license = "MIT"
repository = "https://github.com/Adriftdev/gemini-client"

[dependencies]
anyhow = "1.0.98"
async-stream = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls"
] }
reqwest-eventsource = { version = "0.6", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }

[dev-dependencies]
dotenvy = "0.15"
