[package]
name = "gemini_client_macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the gemini-client-rs crate"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
darling = "0.20" # Helper for parsing proc-macro attributes
